# fastrag

./: .coverage  .coveragerc  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  ARCHITECTURE.md  ARCHITECTURE_IMPLEMENTATION.md  CHANGELOG.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  Dockerfile  FINAL_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  PR_CHECKLIST.md  PR_SUMMARY.md  QUICKSTART.md  README.md  RESTRUCTURE_SUMMARY.md  ROADMAP_V2_SUMMARY.md  TESTING_AND_DOCUMENTATION_REPORT.md  V3_IMPLEMENTATION_SUMMARY.md  app.py  coverage.json  demo.py  docker-compose.production.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  validate.py  validate_roadmap.py
.ci/: README.md
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md  question.md
.github/workflows/: ci.yml  pr_checks.yml  rag_evaluation.yml  test.yml
design/: DEVEX.md  FRAMEWORK.md  PADROES_ARQUITETURAIS.md  PLANNER.md  ROADMAP_COMPLETO.md
docs/: README.md
docs/wiki/: Advanced-Features.md  Architecture.md  Components.md  Home.md  Quick-Start.md  README.md  Testing.md
entrypoints/: __init__.py  demo.py  validate.py
examples/: basic_usage.py  utils_example.py
rag_chatbot/: agent.py  base.py  chunking.py  compression.py  config.py  core.py  crew.py  interfaces.py  memory.py  pipeline.py  query_transform.py  reranking.py  retrieval.py  routing.py  tools.py
rag_chatbot/components/: llms.py  loaders.py  text_splitters.py  vector_stores.py
sample_data/: README.md  architecture.docx  faq.txt  rag_concepts.md  v3_features.md
src/aether/: cli.py
src/aether/core/: config_loader.py  factory.py  interfaces.py  logger.py  models.py  orchestrator.py  quality.py
src/aether/core/validators/: great_expectations_validator.py  pandera_validator.py
src/aether/datasets/: csv_data_set.py  faiss_data_set.py  in_memory_data_set.py  json_data_set.py  parquet_data_set.py
src/aether/jobs/: rag_jobs.py  sample_jobs.py
src/aether_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/fastrag/: __init__.py  core.py  utils.py
src/rag_chatbot/: __init__.py  base.py  config.py  core.py  interfaces.py
src/rag_chatbot/advanced_rag/: __init__.py  chunking.py  compression.py  query_transform.py  reranking.py  retrieval.py
src/rag_chatbot/agents/: __init__.py  agent.py  crew.py  memory.py  tools.py
src/rag_chatbot/components/: embedders.py  llms.py  loaders.py  text_splitters.py  vector_stores.py
src/rag_chatbot/orchestration/: __init__.py  pipeline.py  routing.py
tests/: __init__.py  conftest.py  test_advanced_modules.py  test_agent.py  test_all_modules.py  test_cli.py  test_cli_commands.py  test_components.py  test_core.py  test_e2e.py  test_e2e_rag.py  test_embedders.py  test_integration.py  test_llms.py  test_loaders.py  test_memory.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_placeholder.py  test_text_splitters.py  test_utils.py  test_vector_stores.py
tests/core/: test_config.py  test_factory.py  test_great_expectations.py  test_logger.py  test_orchestrator.py  test_quality.py
tests/datasets/: test_csv_data_set.py  test_json_data_set.py  test_parquet_data_set.py
tests/pipelines/rag_indexing/: catalog.yml  pipeline.yml
tests/quality/: employee_validation_suite.json  schemas.py
