[metadata]
name = fastrag
version = 0.1.0
description = Fast Retrieval-Augmented Generation system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/strondata/fastrag
author = Strondata
author_email = info@strondata.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords = rag, retrieval, generation, llm, ai

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.20.0
    requests>=2.25.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=3.0.0
    black>=22.0.0
    flake8>=4.0.0
    isort>=5.10.0
    mypy>=0.950
